<resources>
    <string name="app_name">AliceaFinal</string>
    <string name="heading">Build your favorite burrito</string>
    <string name="name">Name</string>
    <string name="buildButton">Build</string>
    <string name="toggle_on">Veggie</string>
    <string name="toggle_off">Meat</string>
    <string-array name="location">
        <item>The Hill</item>
        <item>29th Street</item>
        <item>Pearl Street</item>
    </string-array>
    <string name="radio1">burrito</string>
    <string name="radio2">taco</string>
    <string name="switch_on">Gluten Free</string>

<!--    <string name="website">Go to Website</string>-->
</resources>
